@@ -1,3 +1,12 @@
+2002-08-15  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-icon-container.c (icon_set_position):
+	Work around our strange size allocation problems by always assuming
+	the size of fixed_size containers is the size of the screen.
+	This fixes the problem where all desktop icons end up in a pile in the
+	top left corner on startup.
+	We really need to fix our size allocation.
+
 2002-08-14  Dave Camp  <dave@ximian.com>
 
 	* libnautilus-private/nautilus-icon-container.c: 
